<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">lab1</string>
   <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">FirstName</string>
    <string name="last_name">LastName</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>

    <string-array name="age_select">
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </string-array>

    <string name="nias">146716+146745</string>
    <string name="next">Next</string>

</resources>
