<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

   <EditText
        android:id="@+id/EditText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="38dp"
        android:layout_toLeftOf="@+id/editText1"
        android:text="@string/first_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/EditText01"
        android:layout_marginTop="24dp"
        android:ems="10" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText1"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/last_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

   <RadioGroup
       android:id="@+id/radioGroup1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/textView3"
       android:layout_toRightOf="@+id/textView1"
       android:orientation="horizontal" >
        
       
       
       
     <RadioButton
       android:id="@+id/radio0"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/spinner1"
       android:layout_centerHorizontal="true"
       android:checked="true"
       android:text="@string/male" />

   <RadioButton
       android:id="@+id/radio1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/spinner1"
       android:layout_marginLeft="16dp"
       android:layout_toRightOf="@+id/radio0"
       android:text="@string/female" />
   </RadioGroup>

   

   <TextView
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView1"
       android:layout_below="@+id/textView1"
       android:layout_marginTop="33dp"
       android:text="@string/gender"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <TextView
       android:id="@+id/textView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView3"
       android:layout_centerVertical="true"
       android:text="@string/age"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <Spinner
       android:id="@+id/spinner1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:layout_centerVertical="true"
       android:layout_toRightOf="@+id/textView4"
       android:entries="@array/age_select" />

   <Button
       android:id="@+id/button1"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/radioGroup1"
       android:layout_below="@+id/spinner1"
       android:layout_marginLeft="26dp"
       android:layout_marginTop="74dp"
       android:text="@string/next" />

   <TextView
       android:id="@+id/textView5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/spinner1"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="23dp"
       android:text="@string/nias"
       android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
